Refactor project structure
Move static files to separate directory.
Link to a cloud-hosted jQuery.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <title>Brosh</title>
     <meta charset="UTF-8" />
-    <link href="style.css" type="text/css" rel="stylesheet" />
-    <script type="text/javascript" src="../jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="lib.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="commands.js"></script>
+    <link href="static/style.css" type="text/css" rel="stylesheet" />
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="static/lib.js"></script>
+    <script type="text/javascript" src="static/app.js"></script>
+    <script type="text/javascript" src="static/commands.js"></script>
 </head>
 <body id="brosh">
 
