--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="static/lib.js"></script>
     <script type="text/javascript" src="static/app.js"></script>
     <script type="text/javascript" src="static/commands.js"></script>
+    <script type="text/javascript" src="https://www.youtube.com/iframe_api"></script>
 </head>
 <body id="brosh">
 
@@ -25,12 +26,6 @@
 
 <div id="video">
     <div id="player"></div>
-    <script>
-        var tag = document.createElement('script');
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-    </script>    
 </div>
 
 <div id="svg">
