Add settings file for version and display of input keys.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>    
     <script type="text/javascript" src="static/lib.js"></script>
+    <script type="text/javascript" src="static/settings.js"></script>
     <script type="text/javascript" src="static/app.js"></script>
     <script type="text/javascript" src="static/commands.js"></script>
     <script type="text/javascript" src="https://www.youtube.com/iframe_api"></script>
