Fix some bugs in input window.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
 <div id="shell"></div>
 
-<div id="input">
-    <input id="inputenter" type="text" value="">
-</div>
+<div id="input"></div>
 
 <div id="char"></div>
 
